--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,13 @@
 {
-    "name": "jenssegers/agent",
+    "name": "jorisvanw/agent",
     "description": "A PHP desktop/mobile user agent parser with support for Laravel, based on Mobiledetect",
     "keywords": ["laravel", "useragent", "agent", "user agent", "browser", "platform", "mobile"],
-    "homepage": "https://github.com/jenssegers/agent",
+    "homepage": "https://github.com/jorisvanw/agent",
     "license" : "MIT",
     "authors": [
+	{
+            "name": "Joris van Willigen“
+        },
         {
             "name": "Jens Segers",
             "homepage": "https://jenssegers.com"
@@ -13,7 +16,8 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "^4.0|^5.0",
-        "mobiledetect/mobiledetectlib": "^2.0"
+        "mobiledetect/mobiledetectlib": "^2.0”,
+        "jaybizzle/crawler-detect" :"1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
@@ -21,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Jenssegers\\Agent\\": "src/"
+            “Jorisvanw\\Agent\\": "src/"
         }
     },
     "extra": {
