--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license" : "MIT",
     "authors": [
 	{
-            "name": "Joris van Willigen"
+            "name": "Joris van Willigen",
+            "homepage": "http://jorisvanw.com"
         },
         {
             "name": "Jens Segers",
@@ -16,7 +17,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "^4.0|^5.0",
-        "mobiledetect/mobiledetectlib": "^2.0”,
+        "mobiledetect/mobiledetectlib": "^2.0",
         "jaybizzle/crawler-detect" :"1.*"
     },
     "require-dev": {
