Updated composer added minimum-stability

--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,5 @@
             "JorisvanW\\Agent\\": "src/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.0-dev"
-        }
-    }
+    "minimum-stability": "stable"
 }
