--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# IDE
+/.idea
+/_ide_helper.php
+/.phpstorm.meta.php
+
+# OSX Crap
+.DS_Store
+
+# PHP Composer
 /vendor
 composer.phar
 composer.lock
-.DS_Store
-.idea
